...
        <scene sceneID="Jbb-Iz-xfE">
            <objects>
                <viewController title="Commands" id="uM8-tL-Gmf" customClass="CommandsViewController" customModule="openxcframework_Example" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="YVC-4u-wwf"/>
...
                                <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="OpenXC Demo App" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Chx-w3-p6f">
                                        <rect key="frame" x="10" y="11" width="172" height="24"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
...
                                        </constraints>
                                        <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
                                        <state key="normal" title="Settings">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                </connections>
                            </pickerView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="---" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iF4-6p-1el" userLabel="Response">
                                <rect key="frame" x="20" y="430" width="374" height="23"/>
                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Command Response" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ShR-o2-hVP">
                                <rect key="frame" x="24" y="410" width="158" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select a command" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bsc-YI-Qyz">
                                <rect key="frame" x="20" y="57" width="141.66666666666666" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="23"/>
                                <state key="normal" title="Send">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Vx-5l-Vke">
                                        <rect key="frame" x="339" y="10" width="65" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="SettingButton"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="65" id="QlD-bm-lHc"/>
...
        <scene sceneID="wg7-f3-ORb">
            <objects>
                <viewController id="8rJ-Kc-sve" userLabel="Dashboard" customClass="DashboardViewController" customModule="openxcframework_Example" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="L7p-HK-0SC"/>
...
                                        <rect key="frame" x="342" y="10" width="54" height="30"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                        <state key="normal" title="Dismiss">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                        </connections>
                                    </button>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="OpenXC Demo App Settings" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3S4-M9-hX9">
                                        <rect key="frame" x="10" y="11" width="260" height="30"/>
                                        <constraints>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DfD-Qt-cbk">
                                        <rect key="frame" x="25" y="232" width="92" height="30"/>
                                        <state key="normal" title="About">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                <constraint firstAttribute="width" constant="128" id="8W6-TV-gGw"/>
                            </constraints>
                            <state key="normal" title="Back">
                                <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            </state>
...
                            </connections>
                        </button>
                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="About OpenXC" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vx0-j3-l0L">
                            <rect key="frame" x="23" y="18" width="120" height="21"/>
                            <constraints>
...
                            <nil key="highlightedColor"/>
                        </label>
